--- a/index.html
+++ b/index.html
@@ -263,9 +263,11 @@
         }
 
         .content-section {
-            padding: 40px 30px 60px;
+            padding: 40px 60px 60px;
             min-height: 450px;
             width: 100%;
+            max-width: 1600px;
+            margin: 0 auto;
         }
 
         .faculty-title {
@@ -427,11 +429,14 @@
 
         .overview-section {
             margin-bottom: 40px;
-            padding: 30px;
+            padding: 40px;
             background: linear-gradient(135deg, #f8f9fa 0%, #ffffff 100%);
             border-radius: 20px;
             border: 2px solid #e9ecef;
             width: 100%;
+            max-width: 1400px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .section-header {
@@ -474,16 +479,16 @@
 
         .legend-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 12px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 15px;
             margin-bottom: 25px;
         }
 
         .legend-item {
             display: flex;
             align-items: center;
-            gap: 10px;
-            padding: 12px;
+            gap: 12px;
+            padding: 14px 16px;
             background: white;
             border-radius: 10px;
             border-left: 4px solid var(--item-color);
@@ -506,13 +511,13 @@
 
         .legend-name {
             flex: 1;
-            font-size: 13px;
+            font-size: 14px;
             font-weight: 600;
             color: #2c3e50;
         }
 
         .legend-value {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 800;
             color: var(--item-color);
         }
@@ -835,7 +840,7 @@
 
     <div class="container">
         <header>
-            <h1><i class="fas fa-bible"></i> Clases Bíblicas UPeU Juliaca</h1>
+            <h1>Clases Bíblicas UPeU Juliaca</h1>
             <div class="subtitle">
                 <i class="fas fa-chart-line"></i>
                 Sistema de Monitoreo en Tiempo Real
@@ -954,8 +959,8 @@
 
         const clasesBiblicasRango = { inicio: 149, fin: 211 };
         const leccionesActualesRango = { inicio: 215, fin: 277 };
-        const docentesLideresRango = { inicio: 297, fin: 359 };
-        const leccionActualRango = { inicio: 364, fin: 422 };
+        const docentesLideresRango = { inicio: 295, fin: 359 };
+        const leccionActualRango = { inicio: 361, fin: 422 };
 
         const facultadesConfig = [
             { filaNombre: 281, filaValor: 288 },
@@ -1222,17 +1227,17 @@
                         <div class="section-icon"><i class="fas fa-chart-pie"></i></div>
                         <div class="section-title">Vista General de Alumnos Participantes</div>
                     </div>
-                    <div style="display: flex; gap: 30px; margin-bottom: 30px; flex-wrap: wrap;">
-                        <div style="flex: 0 0 400px; min-width: 300px;">
-                            <div style="background: white; border-radius: 16px; padding: 20px; border: 2px solid #e9ecef;">
-                                <canvas id="${canvasId}" style="max-height: 350px;"></canvas>
+                    <div style="display: flex; gap: 40px; margin-bottom: 30px; flex-wrap: wrap; justify-content: center; align-items: flex-start;">
+                        <div style="flex: 0 0 450px; min-width: 350px; max-width: 450px;">
+                            <div style="background: white; border-radius: 16px; padding: 30px; border: 2px solid #e9ecef; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
+                                <canvas id="${canvasId}" style="max-height: 380px;"></canvas>
                             </div>
-                            <div style="margin-top: 20px; text-align: center; background: linear-gradient(135deg, #003865 0%, #0077cc 100%); padding: 25px; border-radius: 16px; box-shadow: 0 10px 30px rgba(0,56,101,0.3);">
+                            <div style="margin-top: 25px; text-align: center; background: linear-gradient(135deg, #003865 0%, #0077cc 100%); padding: 30px; border-radius: 16px; box-shadow: 0 10px 30px rgba(0,56,101,0.3);">
                                 <div style="font-size: 56px; font-weight: 800; color: white;">${totalBautizados}</div>
                                 <div style="font-size: 13px; color: rgba(255,255,255,0.9); text-transform: uppercase; font-weight: 600; letter-spacing: 1px; margin-top: 8px;">${TEXTO_TOTAL}</div>
                             </div>
                         </div>
-                        <div style="flex: 1; min-width: 300px;">
+                        <div style="flex: 1; min-width: 350px; max-width: 800px;">
                             <div class="legend-grid">
                                 ${escuelasConDatos.map((esc, index) => {
                                     const colorScheme = colorSchemes[index % colorSchemes.length];
