--- a/index.html
+++ b/index.html
@@ -970,7 +970,6 @@
         ];
 
         const clasesPorEscuelaConfig = [
-            { filaNombre: 427, filaValor: 442 },
             { filaNombre: 428, filaValor: 443 },
             { filaNombre: 429, filaValor: 444 },
             { filaNombre: 430, filaValor: 445 },
@@ -982,6 +981,7 @@
             { filaNombre: 436, filaValor: 451 },
             { filaNombre: 437, filaValor: 452 },
             { filaNombre: 438, filaValor: 453 },
+            { filaNombre: 439, filaValor: 454 }
         ];
 
         const colorSchemes = [
